--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+    <h1>Increment Decrement</h1>
+    <div class="app">
+        <h2 class="decrement">-</h2>
+        <h2 class="display-num">0</h2>
+        <h2 class="increment">+</h2>
+    </div>
+    <script src ="index.js"></script>
 </body>
 </html>
